--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org
-      - run: npm run install
+      - run: npm install
       - run: npm run build
       - name: publish
         run: npm publish --access public
