--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org
-      - run: npm install
-      - run: npm run build
+      - run: yarn install
+      - run: yarn run build
       - name: publish
-        run: npm publish --access public
+        run: yarn publish --access public
         working-directory: dist
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
