--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "curated-pull-out-sources-ph",
   "version": "1.0.1",
-  "description": "Typescript Starter",
+  "description": "Curated pull out sources",
   "main": "dist/index.js",
   "keywords": ["crawler", "for closed properties"],
   "types": "index.d.ts",
