--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,16 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
+
       - name: set up nodejs
         uses: actions/setup-node@v2.1.5
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org
+
       - run: yarn install
+      - run: yarn build
+
       - name: publish
         run: yarn publish --access public
         env:
