--- a/.eslintrc
+++ b/.eslintrc
@@ -26,15 +26,15 @@
     "no-undef": "off", // ts(2304)
     "no-unreachable": "off", // ts(7027)
     "no-unsafe-negation": "off", // ts(2365) & ts(2360) & ts(2358)
-    "no-var": "error", // ts transpiles let/const to var, so no need for vars any more
-    "prefer-const": "error", // ts provides better types with const
-    "prefer-rest-params": "error", // ts provides better types with rest args over arguments
-    "prefer-spread": "error", // ts transpiles spread to apply, so no need for manual apply
+    "no-var": "warn", // ts transpiles let/const to var, so no need for vars any more
+    "prefer-const": "warn", // ts provides better types with const
+    "prefer-rest-params": "warn", // ts provides better types with rest args over arguments
+    "prefer-spread": "warn", // ts transpiles spread to apply, so no need for manual apply
     "valid-typeof": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/ban-types": "off",
-    "quotes": ["error", "single"],
+    "quotes": ["warn", "single"],
     "semi":"warn"
   }
 }
