--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.5",
   "description": "Curated pull out sources",
   "main": "dist/index.js",
-  "keywords": ["crawler", "for closed properties"],
+  "keywords": [
+    "crawler",
+    "for closed properties"
+  ],
   "types": "index.d.ts",
   "scripts": {
     "start": "npm run serve",
@@ -21,10 +24,12 @@
     "prepublish": "yarn build"
   },
   "devDependencies": {
+    "@types/app-root-path": "^1.2.4",
     "@types/cheerio": "^0.22.28",
     "@types/dotenv": "^8.2.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.11.2",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "concurrently": "^5.3.0",
@@ -41,13 +46,18 @@
     "yarn": ">= 1.22.4"
   },
   "dependencies": {
+    "@types/json2csv": "^5.0.3",
+    "app-root": "^3.0.0",
+    "app-root-path": "^3.0.0",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "class-transformer": "^0.4.0",
     "dotenv": "^8.2.0",
+    "json2csv": "^5.0.7",
     "lodash": "^4.17.21",
     "puppeteer": "^8.0.0",
     "reflect-metadata": "^0.1.13",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "uuid": "^8.3.2"
   }
 }
